[Bugfix] Fix gap between notice and menubar

--- a/src/resources/scss/laraberg.scss
+++ b/src/resources/scss/laraberg.scss
@@ -12,6 +12,8 @@
 
   .components-notice-list {
     position: sticky;
+    top: 0;
+    z-index: 100;
   }
 
   .edit-post-header {
